Fixing up VR for form elements specifically fieldsets and custom
Noticed a problem with a <br/> under the custom checkbox area in the
demo. It is overlapping the previous row causing it to report height
incorrectly. A div with a space in it works though.

--- a/scss/foundation/common/_forms.scss
+++ b/scss/foundation/common/_forms.scss
@@ -5,7 +5,7 @@
 
   form { margin: 0 0 $formSpacing / 2; }
 
-  .row form .row { margin: 0 (-($formSpacing / 2));
+  .row form .row { margin: 0 (-($formSpacing / 2)) (-($formSpacing / 2));
 
     .column, .columns { padding: 0 ($formSpacing / 2); }
 
@@ -17,7 +17,7 @@
   label { font-size: ms(0); color: lighten($black, 30%); cursor: pointer; display: block; font-weight: 500;
 
     &.right { float: none; text-align: right; }
-    &.inline { margin: 0 0 $formSpacing 0; padding: $formSpacing / 2 0; }
+    &.inline { line-height: $formSpacing * 1.5; margin-bottom: $formSpacing / 2; }
   }
 
   @media only screen and (max-width: $screenSmall - 1) {
@@ -44,7 +44,7 @@
   select { width: 100%; }
 
   /* Fieldsets */
-  fieldset { border: solid 1px #ddd; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; padding: $formSpacing / 2 - 2 $formSpacing / 2 - 1 0; margin: $formSpacing / 2 0;
+  fieldset { border: solid 1px #ddd; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; padding: $formSpacing / 4 $formSpacing / 2 $formSpacing / 4 - 1; margin-bottom: $formSpacing / 2;
 
     legend { font-weight: bold; background: $white; padding: 0 3px; margin: 0; margin-#{$defaultFloat}: -3px; }
   }
@@ -77,7 +77,7 @@
         &:before { content: "\00d7"; color: #222; }
       }
     }
-    div.custom.dropdown { display: block; position: relative; width: auto; height: 28px; margin-bottom: 9px; margin-top: 2px;
+    div.custom.dropdown { display: block; position: relative; width: auto; height: 28px; margin-bottom: $formSpacing * 2 - 28;
 
       a.current { display: block; width: auto; line-height: 26px; min-height: 28px; padding: 0; padding-#{$defaultFloat}: 6px; padding-#{$defaultOpposite}: 38px; border: solid 1px #ddd; color: #141414; background-color: #fff; white-space: nowrap; }
       a.selector { position: absolute; width: 27px; height: 28px; display: block; #{$defaultOpposite}: 0; top: 0; border: solid 1px #ddd;
